--- a/views/simulado/meus-simulados.ejs
+++ b/views/simulado/meus-simulados.ejs
@@ -14,8 +14,6 @@
 
         <!-- Outros elementos do head -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <script src="/js/gerarPDF.js"></script>
     
     <title>Responsive sidebar submenus</title>
 </head>
@@ -79,6 +77,27 @@
         cursor: pointer;
 
     }
+    /* Modal de gerar pdf */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.4);
+    }
+    
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
 </style>
 
 <body>
@@ -119,9 +138,9 @@
                                             <i class="fas fa-edit"></i> Editar
                                         </div>
                                     </a>
-                                    <a href="/usuario/simulados/<%= simulado.id %>/imprimir" class="button" id="generate-pdf">
+                                    <a href="/usuario/simulados/<%= simulado.id %>/imprimir" id="generate-pdf" class="button">
                                         <div class="icon-button">
-                                            <i class="fa-sharp fa-solid fa-download"></i> Imprimir
+                                            <i class="fas fa-print"></i> Gerar PDF
                                         </div>
                                     </a>
                                     <a href="/usuario/simulados/<%= simulado.id %>/adicionar-questoes" class="button">
@@ -136,6 +155,12 @@
                                     </a>
                                 </div>
                             </td>
+                            <div id="modal-imprimir" class="modal">
+                                <div class="modal-content">
+                                    <!-- inclusão de um documento html dentro do outro -->
+                                    <iframe id="iframe-imprimir" src="" frameborder="0" width="100%" height="600"></iframe>
+                                </div>
+                            </div>
                         </tr>
                         <% }); %>
                 </tbody>
@@ -166,6 +191,38 @@
         </main>
         <!--========== MAIN JS ==========-->
         <script src="/js/main.js"></script>
+        
+        <!-- Modal de gerar pdf -->
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                const botoesImprimir = document.querySelectorAll('.button[id="generate-pdf"]'); // seleciona o botão de gerar pdf
+                
+                // Adicionar o evento click
+                botoesImprimir.forEach(botao => {
+                    botao.addEventListener('click', function(e) {
+                        e.preventDefault(); // impedir o redirecionamento para a pagina via link
+                        
+                        // Pega o id do simulado
+                        const simuladoId = this.href.split('/').filter(part => !isNaN(part)).pop(); // split: dividir a URL; filter: pegar apenas o ID do simulado; pop: retornar o ultimo número encontrado
+
+                        const iframe = document.getElementById('iframe-imprimir'); // captura o id do iframe da pagina
+                        iframe.src = `/usuario/simulados/${simuladoId}/imprimir`;  // carregar o conteudo
+                        
+                        // Exibição do conteudo da modal
+                        const modal = document.getElementById('modal-imprimir');
+                        modal.style.display = 'block';
+                    });
+                });
+
+                // Fechamento da modal
+                window.onclick = function(event) {
+                    const modal = document.getElementById('modal-imprimir');
+                    if (event.target == modal) {
+                        modal.style.display = "none";
+                    }
+                }
+            });
+            </script>
 </body>
 
 </html>
